# PremierGalop

./: .PremierGalop  .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  PremierGalop.sln  ReadMe.txt  license.txt
LogicChevaux/: AllHorseAIPlayerImpl.cpp  AllHorseAIPlayerImpl.h  Board.cpp  Board.h  CMakeLists.txt  Case.cpp  Case.h  ConfigParam.cpp  ConfigParam.h  FileUtility.cpp  FileUtility.h  Horse.cpp  Horse.h  HumanPlayerImpl.cpp  HumanPlayerImpl.h  LogicChevaux.vcproj  LogicalLocalization.cpp  LogicalLocalization.h  OneHorseAIPlayerImpl.cpp  OneHorseAIPlayerImpl.h  Player.cpp  Player.h  PlayerInterface.h  SmartHorseAIPlayerImpl.cpp  SmartHorseAIPlayerImpl.h  StringUtility.cpp  StringUtility.h  types.h
PremierGalop/: CMakeLists.txt  Chevaux.cpp  Chevaux.h  PremierGalop.vcproj  ReadMe.txt  classicArrayplayers.txt
SDLGfxChevaux/: CMakeLists.txt  GfxBoard.cpp  GfxBoard.h  SDLGfxChevaux.vcproj
SFMLGfxChevaux/: CMakeLists.txt  GfxBoard.cpp  GfxBoard.h  SFMLGfxChevaux.vcproj
bin2C/: CMakeLists.txt  RulesForGfx.rules  bin2C.cpp  bin2C.vcproj
gfx/: CMakeLists.txt
maps/: CMakeLists.txt  classic4players.map  classicBig4players.map
